alignment-fixes

--- a/zeeguu_web/static/css/newStyleWords.css
+++ b/zeeguu_web/static/css/newStyleWords.css
@@ -138,10 +138,13 @@ a {
     text-align: center;
     margin-top: 1em;
     margin-right: 1em;
+    display:table;  
 }
 
 .open {
     color: black;
+    display:table-cell; 
+    vertical-align: middle;
 }
 
 .open:hover {
@@ -232,6 +235,7 @@ a {
     height: 1.5em;
     border-radius: 2em;
     margin-top: 1.1em;
+    display:table; 
 }
 
 .five {
@@ -323,7 +327,7 @@ a {
     margin-left: 0em;
 }
 
-@media only screen and (max-width: 414px) {
+@media only screen and (max-width: 420px) {
 
     body {
         position: fixed;
@@ -364,6 +368,7 @@ a {
 
     .outerDate {
         margin-left: 2vw;
+        width: unset;
     }
 
     .articleContainer {
@@ -372,7 +377,7 @@ a {
     }
     
     .openArticle {
-        width: 25vw;
+        width: 4em;
     }
 
     .customP {
@@ -381,6 +386,7 @@ a {
 
     .rank {
         line-height: 1.5em;
+        
     }
 
     .table {
@@ -409,6 +415,11 @@ a {
         width: 87vw;
         font-size: 3vw;
     }
+    
+    .word-rank{
+        display:table-cell; 
+        vertical-align: middle;
+    }
 
     
 }
@@ -427,10 +438,6 @@ a {
 
     .titleHeader {
         margin-top: 5vh;
-    }
-
-    .openArticle {
-        width: 40vw;
     }
 
     .articleContainer {
